# omega-builder-server

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  last-run.html  pyproject.toml  stubs.json
.github/: ci.yml
.github/workflows/: omega-ci.yml  preview.yml  quality-gate.yml
.omega/: spec.json
.test-omega/.omega/: stubs.json
_smoke/: README.md  pubspec.yaml
_smoke/linux/: CMakeLists.txt
_smoke/test/: widget_test.dart
_smoke/web/: index.html  manifest.json
_smoke/windows/: CMakeLists.txt
ai-vm/: .dockerignore
ai-vm/app/: main.py  routes_build.py  routes_melos.py  routes_scaffold.py  routes_services.py
ai-vm/docker/: Dockerfile
ai-vm/scripts/: job_runner.sh  publish_preview.sh
ai-vm/workers/: assets_worker.py
backend/: main.py  worker.py
backend/routes/: api_cart.py  api_checkout.py  api_orders.py  api_products.py  api_rx.py  api_validate.py
backend/tests/: test_envs.py  test_envs_api.py  test_generate.py  test_health.py  test_import_export.py  test_plan_service.py  test_stubs.py  test_stubs_filters.py  test_tags.py  test_tags_mutators.py
docker/: Dockerfile
flutter_smoke/: README.md  pubspec.yaml
flutter_smoke/linux/: CMakeLists.txt
flutter_smoke/test/: widget_test.dart
flutter_smoke/web/: index.html  manifest.json
flutter_smoke/windows/: CMakeLists.txt
insta_pharma/: melos.yaml
insta_pharma/.omega/: spec.json
preview/: index.html
scripts/: mvp_smoke.sh  progress.sh  smoke.sh
staging/: .gitignore  .metadata  README.md  package.json  pubspec.yaml  server.js
(+135 files in other folders)
