[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omega-builder"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.8",
  "pydantic-settings>=2.5",
  "tenacity>=8.2",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "sse-starlette>=2.1",
  "openai>=1.40.0",
  "redis>=5.0",  
]

[tool.uvicorn]
factory = true

[tool.ruff]
line-length = 100
select = ["E","F","I","UP"]

# Tell setuptools what to package (include only code, not assets/workspace)
[tool.setuptools.packages.find]
include = ["backend*", "cli*"]
exclude = ["assets*", "docker*", "scripts*", "workspace*"]